# steam_wishlist_scrapper

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
models/: game.py
scrapper/: wishlist.py
src/steam_wishlist_scrapper/scrapper/: wishlist.py
