[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steam_wishlist_scrapper"
version = "0.0.2"
authors = [
	{ name = "Joaquín Monteagudo Gómez", email = "kindos7@gmail.com" },
]
description = "Barebones package, for extracting the games of a Steam user's wishlist"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	'anyio==3.6.2',
	'certifi==2023.5.7',
	'h11==0.14.0',
	'httpcore==0.17.2',
	'httpx==0.24.1',
	'idna==3.4',
	'pydantic==1.10.8',
	'sniffio==1.3.0',
	'typing_extensions==4.6.1'
]

[project.urls]
"Homepage" = "https://github.com/Anxiko/steam_wishlist_scrapper"